# Netflix-Recommendations-Web-Scrapping-Ensemble-Models

./: .gitattributes  .gitignore  MergeNetflixIMDB.ipynb  README.md  download_data.sh  poetry.toml  pyproject.toml  scrape_IMDB.py  setup_vlc.txt
IMDB_data/: MergeNetflixIMDB.ipynb  completed_movies.csv  error.txt  error_movies.csv  scrape_IMDB.py
IMDB_data/data/: 'N Sync: 'N the Mix_1999.json  'N Sync: Live at Madison Square Garden_2000.json  'N Sync: Making of the Tour_2000.json  'N Sync: PopOdyssey Live_2003.json  'Round Midnight_1986.json  .Com for Murder_2002.json  .hack||Legend of the Twilight_2003.json  .hack||SIGN_2002.json  1 Giant Leap_2002.json  10 Attitudes_2001.json  10 Minute Solution: Pilates_2004.json  10 Things I Hate About You_1999.json  10 to Midnight_1983.json  10.5_2004.json  100 Days Before the Command_1990.json  100 Days_1991.json  100 Girls_2000.json  100 Mile Rule_2002.json  100 Women_2002.json  100 Years of Comedy_1997.json  100 Years of Horror_1996.json  100 Years of the New York Yankees_2003.json  100 Years of the World Series_2003.json  101 Dalmatians II: Patch's London Adventure_2003.json  101 Reykjavik_2000.json  102 Dalmatians_2000.json  (+13966 more)
SVD/: Data_parsing_SVD_training.ipynb  Data_parsing_SVD_training_SVD.ipynb  test.py
deep-learning/: deep_learning-dot.py  deep_learning-metadata.py  deep_learning.ipynb  deep_learning.py  how-to-recommend-anything-deep-recommender.ipynb  model_nn_hidden_layers.pt  model_nn_matrix_dot.pt
prize_dataset/: Exploratory_data_analysis.ipynb  README.md  download_data.sh  movie_titles_processed.csv
(+1 files in other folders)
