[tool.poetry]
name = "csc-422-netflix-recommendations-web-scrapping-ensemble-models"
version = "0.1.0"
description = ""
authors = ["Griffith Baker <gmbaker3@ncsu.edu>"]
readme = "README.md"
packages = [{include = "csc_422_netflix_recommendations_web_scrapping_ensemble_models"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "2.0.0"
requests-html = "^0.10.0"
regex = "^2023.3.23"
ipykernel = "^6.22.0"
isodate = "^0.6.1"
gdown = "^4.7.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
numpy = "^1.23.5"
plotly = "^5.14.0"
tensorflow = "^2.12.0"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
